@@ -2,6 +2,7 @@
 \title{Get the Parameter(s) of a Copula}
 \alias{getTheta}
 \alias{getTheta-methods}
+\alias{getTheta,parCopula-method}
 \alias{getTheta,copula-method}
 \alias{getTheta,acopula-method}
 \alias{getTheta,xcopula-method}
@@ -12,11 +13,12 @@
   Get the parameter (vector) \eqn{\theta}{theta} (\code{theta}) of
   a copula, see \code{\link{setTheta}} for more background.
 }
-\usage{
+\usage{%% S4 generic and all S4 methods have same signature (no '...')
 getTheta(copula, freeOnly = TRUE, attr = FALSE, named = attr)
 }
 \arguments{
-  \item{copula}{an \R object of class \code{\linkS4class{copula}}.}% only, for now
+  \item{copula}{an \R object of class \code{"\linkS4class{parCopula}"},
+    e.g., \code{"\linkS4class{copula}"}.}% only, for now
   %%, i.e., any copula from package \pkg{copula}.
   \item{freeOnly}{logical indicating that only non-fixed aka
     \dQuote{free} parameters are to be returned (as vector).}
@@ -27,6 +29,8 @@ getTheta(copula, freeOnly = TRUE, attr = FALSE, named = attr)
 }
 \section{Methods}{
   \describe{
+    \item{\code{signature(copula = "parCopula")}}{a default method,
+      returning \code{numeric(0).}}
     \item{\code{signature(copula = "copula")}}{ .. }
     \item{\code{signature(copula = "acopula")}}{ .. }
     \item{\code{signature(copula = "khoudrajiCopula")}}{ .. }
@@ -46,6 +50,7 @@ getTheta(copula, freeOnly = TRUE, attr = FALSE, named = attr)
   \code{\link{setTheta}}, its inverse.
 }
 \examples{
+showMethods("getTheta")
 \dontshow{stopifnot(all.equal(}
 getTheta(setTheta(copClayton, 0.5)) # is 0.5
 \dontshow{, 0.5))}
